@@ -25,7 +25,7 @@ VERSION=$(shell sed -n '1s/Version \(.*\):/\1/p' changelog)
 
 SRC=$(shell find cx -name '*.java')
 
-all: salliere-$(VERSION).jar salliere.1 bin/salliere gsalliere-$(VERSION).jar gsalliere.1 bin/gsalliere bin/leaderboard leaderboard-$(VERSION).jar leaderboard.1 bin/ecl2salliere
+all: salliere-$(VERSION).jar salliere.1 bin/salliere gsalliere-$(VERSION).jar gsalliere.1 bin/gsalliere salliere-handicaps-$(VERSION).jar salliere-handicaps.1 bin/salliere-handicaps bin/leaderboard leaderboard-$(VERSION).jar leaderboard.1 bin/ecl2salliere
 
 .bin:
 	mkdir -p bin
@@ -45,14 +45,16 @@ clean:
 	rm -f .classes .bin .testbin *.tar.gz *.jar *.1 *Manifest.txt
 
 salliere-$(VERSION).jar: SalliereManifest.txt .classes
-	(cd classes; $(JAR) cfm ../$@ ../$< $(shell cd classes; find cx -name '*.class' -and -not -name 'GSalliere*' -and -not -name 'Leader*'  | sed 's/\$$/\\$$/g') *localized*.class)
+	(cd classes; $(JAR) cfm ../$@ ../$< $(shell cd classes; find cx -name '*.class' -and -not -name 'GSalliere*' -and -not -name 'Leader*' -and -not -name 'Handicaps*'  | sed 's/\$$/\\$$/g') *localized*.class)
 
 gsalliere-$(VERSION).jar: GSalliereManifest.txt .classes
 	(cd classes; $(JAR) cfm ../$@ ../$< cx/ath/matthew/salliere/GSalliere*.class)
 leaderboard-$(VERSION).jar: LeaderBoardManifest.txt .classes
 	(cd classes; $(JAR) cfm ../$@ ../$< cx/ath/matthew/salliere/Leader*.class)
+salliere-handicaps-$(VERSION).jar: SalliereHandicapsManifest.txt .classes
+	(cd classes; $(JAR) cfm ../$@ ../$< cx/ath/matthew/salliere/Handicaps*.class)
 
-salliere-$(VERSION).tar.gz: Makefile cx README INSTALL COPYING changelog todo salliere.sh salliere.sgml Manifest.txt.in gsalliere.sh gsalliere.sgml translations ecl2salliere.sh leaderboard.sh leaderboard.sgml
+salliere-$(VERSION).tar.gz: Makefile cx README INSTALL COPYING changelog todo salliere.sh salliere.sgml Manifest.txt.in salliere-handicaps.sh salliere-handicaps.sgml gsalliere.sh gsalliere.sgml translations ecl2salliere.sh leaderboard.sh leaderboard.sgml
 	mkdir -p salliere-$(VERSION)
 	cp -a $^ salliere-$(VERSION)
 	tar zcf $@ salliere-$(VERSION)
@@ -69,8 +71,8 @@ debug-$(DEBUG).jar:
 bin/%: %.sh .bin
 	sed 's,\%JARINSTPATH\%,$(JARINSTALLDIR),;s,\%JARLIBPATH\%,$(JARLIBDIR),;s,\%VERSION\%,$(VERSION),;s,\%DEBUG\%,$(DEBUG),;s,\%JAVA\%,$(JAVA),' < $< > $@
 
-testbin/%: %.sh .testbin salliere-$(VERSION).jar csv.jar debug-$(DEBUG).jar itext.jar gsalliere-$(VERSION).jar commons-net.jar leaderboard-$(VERSION).jar
-	sed 's,\%JARPATH\%,.,;s,\%VERSION\%,$(VERSION),;s,\%DEBUG\%,$(DEBUG),;s,\%JAVA\%,$(JAVA),' < $< > $@
+testbin/%: %.sh .testbin salliere-$(VERSION).jar csv.jar debug-$(DEBUG).jar itext.jar salliere-handicaps-$(VERSION).jar gsalliere-$(VERSION).jar commons-net.jar leaderboard-$(VERSION).jar
+	sed 's,\%JARPATH\%,'"`pwd`"',;s,\%VERSION\%,$(VERSION),;s,\%DEBUG\%,$(DEBUG),;s,\%JAVA\%,$(JAVA),' < $< > $@
 	chmod 755 $@
 
 %.1: %.sgml
@@ -96,6 +98,16 @@ endif
 	cat $< >> $@
 	echo "Implementation-Version: $(VERSION)" >> $@
 
+SalliereHandicapsManifest.txt: Manifest.txt.in
+	echo Main-Class: cx.ath.matthew.salliere.Handicaps > $@
+ifeq ($(DEBUG),enable)
+	echo Class-Path: $(JARLIBDIR)/debug-$(DEBUG).jar $(JARINSTALLDIR)/salliere-$(VERSION).jar >> $@
+else
+	echo Class-Path: $(JARINSTALLDIR)/salliere-$(VERSION).jar >> $@
+endif
+	cat $< >> $@
+	echo "Implementation-Version: $(VERSION)" >> $@
+
 LeaderBoardManifest.txt: Manifest.txt.in
 	echo Main-Class: cx.ath.matthew.salliere.Leaders > $@
 ifeq ($(DEBUG),enable)
@@ -110,26 +122,29 @@ translations/en_GB.po: $(SRC)
 	echo "#java-format" > $@
 	sed -n '/_(/s/.*_("\([^"]*\)").*/\1/p' $^ | sort -u | sed 's/\(.*\)/msgid "\1"\nmsgstr "\1"/' >> $@
 
-install: salliere.1 gsalliere.1 bin/salliere bin/gsalliere gsalliere-$(VERSION).jar salliere-$(VERSION).jar changelog COPYING INSTALL README todo bin/ecl2salliere bin/leaderboard leaderboard-$(VERSION).jar leaderboard.1
+install: salliere.1 gsalliere.1 bin/salliere-handicaps bin/salliere bin/gsalliere salliere-handicaps-$(VERSION).jar gsalliere-$(VERSION).jar salliere-$(VERSION).jar changelog COPYING INSTALL README todo bin/ecl2salliere bin/leaderboard leaderboard-$(VERSION).jar leaderboard.1 salliere-handicaps.1
 	install -d $(DESTDIR)$(BINDIR)
 	install bin/salliere $(DESTDIR)$(BINDIR)
 	install bin/gsalliere $(DESTDIR)$(BINDIR)
+	install bin/salliere-handicaps $(DESTDIR)$(BINDIR)
 	install bin/leaderboard $(DESTDIR)$(BINDIR)
 	install bin/ecl2salliere $(DESTDIR)$(BINDIR)
 	install -d $(DESTDIR)$(MANDIR)
 	install -m 644 salliere.1 $(DESTDIR)$(MANDIR)
 	install -m 644 leaderboard.1 $(DESTDIR)$(MANDIR)
 	install -m 644 gsalliere.1 $(DESTDIR)$(MANDIR)
+	install -m 644 salliere-handicaps.1 $(DESTDIR)$(MANDIR)
 	install -d $(DESTDIR)$(JARINSTALLDIR)
 	install -m 644 salliere-$(VERSION).jar $(DESTDIR)$(JARINSTALLDIR)
 	install -m 644 gsalliere-$(VERSION).jar $(DESTDIR)$(JARINSTALLDIR)
 	install -m 644 leaderboard-$(VERSION).jar $(DESTDIR)$(JARINSTALLDIR)
+	install -m 644 salliere-handicaps-$(VERSION).jar $(DESTDIR)$(JARINSTALLDIR)
 	install -d $(DESTDIR)$(DOCDIR)
 	install -m 644 changelog COPYING INSTALL README todo $(DESTDIR)$(DOCDIR)
 
 uninstall:
-	rm -f $(DESTDIR)$(BINDIR)/salliere $(DESTDIR)$(BINDIR)/gsalliere $(DESTDIR)$(BINDIR)/ecl2salliere $(DESTDIR)$(BINDIR)/leaderboard
-	rm -f $(DESTDIR)$(JARINSTALLDIR)/salliere-$(VERSION).jar $(DESTDIR)$(JARINSTALLDIR)/gsalliere-$(VERSION).jar $(DESTDIR)$(JARINSTALLDIR)/leaderboard-$(VERSION).jar
-	rm -f $(DESTDIR)$(MANDIR)/salliere.1 $(DESTDIR)$(MANDIR)/gsalliere.1 $(DESTDIR)$(MANDIR)/leaderboard.1
+	rm -f $(DESTDIR)$(BINDIR)/salliere $(DESTDIR)$(BINDIR)/gsalliere $(DESTDIR)$(BINDIR)/ecl2salliere $(DESTDIR)$(BINDIR)/leaderboard $(DESTDIR)$(BINDIR)/salliere-handicaps
+	rm -f $(DESTDIR)$(JARINSTALLDIR)/salliere-$(VERSION).jar $(DESTDIR)$(JARINSTALLDIR)/gsalliere-$(VERSION).jar $(DESTDIR)$(JARINSTALLDIR)/leaderboard-$(VERSION).jar $(DESTDIR)$(JARINSTALLDIR)/salliere-handicaps-$(VERSION).jar
+	rm -f $(DESTDIR)$(MANDIR)/salliere.1 $(DESTDIR)$(MANDIR)/gsalliere.1 $(DESTDIR)$(MANDIR)/leaderboard.1 $(DESTDIR)$(MANDIR)/salliere-handicaps.1
 	rm -f $(DESTDIR)$(DOCDIR)/changelog $(DESTDIR)$(DOCDIR)/COPYING $(DESTDIR)$(DOCDIR)/INSTALL $(DESTDIR)$(DOCDIR)/README $(DESTDIR)$(DOCDIR)/todo
 	rmdir --ignore-fail-on-non-empty $(DESTDIR)$(BINDIR) $(DESTDIR)$(MANDIR) $(DESTDIR)$(JARINSTALLDIR) $(DESTDIR)$(DOCDIR)
