@@ -1,0 +1,7 @@
+#!/bin/sh --
+
+JAVA=%JAVA%
+VERSION=%VERSION%
+JARPATH=%JARPATH%
+
+exec $JAVA -jar $JARPATH/salliere-handicaps-$VERSION.jar "$@"
