@@ -2,6 +2,7 @@ Version 0.11:
 
 	* Sort numeric substrings numerically
 	* More useful information on verify
+	* Add a handicaps program for creating handicap tables
 
 Version 0.10:
 	
